# Real-Roots-Polynomial-Engine

./: CMakeLists.txt  LICENSE  README.md
PolyEngine/: CMakeLists.txt  engine.cpp  engine.h  poly.cpp  poly.h
UnitTesting/: CMakeLists.txt  engineTest.cpp  executedTest.cpp  extensiveTesting.cpp  test1.cpp
build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PolyEngine.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build2/PolyEngine/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  engine.sln  engine.vcxproj  engine.vcxproj.filters
build2/PolyEngine/engine.dir/Debug/: engine.lib.recipe
build2/UnitTesting/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Test1.vcxproj  Test1.vcxproj.filters  Test1[1]_include.cmake  cmake_install.cmake  tests.sln
build2/UnitTesting/googletest-1.14.0/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  googletest-distribution.sln
(+51 files in other folders)
